[project]
name = "fastapi-f1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.135.2",
    "passlib>=1.7.4",
    "pyjwt>=2.12.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
